Added: website footer section

--- a/index.html
+++ b/index.html
@@ -30,5 +30,15 @@
     </nav>
 
     <hr class="hrLine">
+    <div class="body">
+        This will be updated soon...
+    </div>
+
+    <hr class="hrLine">
+
+    <footer class="ft-container">
+        <p class="ft-text">Powered by <span class="ft-title">Pages</span></p>
+    </footer>
+
 </body>
 </html>
