--- a/Accoridan/index.html
+++ b/Accoridan/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accordian</title>
+
+    <!-- External CSS -->
     <link rel="stylesheet" href="./style.css">
-    <script src="./script.js" defer></script>
 </head>
 <body>
 
@@ -72,5 +73,7 @@
         </div>
     </div>
 
+    <!-- JavaScript -->
+    <script src="./script.js" defer></script>
 </body>
 </html>
