Fix: javascript code optimized.

--- a/Counter/index.html
+++ b/Counter/index.html
@@ -5,20 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Counter</title>
+
+    <!-- External CSS -->
     <link rel="stylesheet" href="./style.css">
-    <script src="./script.js" defer></script>
 </head>
 <body>
+    
     <div class="container">
         <div class="counter-card">
             <h1 class="counter-heading">Counter App</h1>
             <div id="counter-text">100</div>
             <div class="btn">
-                <button class="btn-plus" onclick="plus()">Plus</button>
-                <button class="btn-reset" onclick="reset()">Reset</button>
-                <button class="btn-minus" onclick="minus()">Minus</button>
+                <button class="btn-plus">Plus</button>
+                <button class="btn-reset">Reset</button>
+                <button class="btn-minus">Minus</button>
             </div>
         </div>
     </div>
+
+    <!-- JavaScript -->
+    <script src="./script.js" defer></script>
 </body>
 </html>
