--- a/Expanding Cards/index.html
+++ b/Expanding Cards/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expanding Cards</title>
+
+    <!-- External CSS -->
     <link rel="stylesheet" href="./style.css">
-    <script src="./script.js" defer></script>
 </head>
 <body>
+    
     <div class="container">
         <div class="panel active" style="background-image: url('https://images.unsplash.com/photo-1558979158-65a1eaa08691?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80')">
             <h3>Explore The World</h3>
@@ -30,5 +32,8 @@
             <h3>Mountains - Cloud</h3>
         </div>
     </div>
+
+    <!-- JavaScript -->
+    <script src="./script.js" defer></script>
 </body>
 </html>
