--- a/Hidden Search Widget/index.html
+++ b/Hidden Search Widget/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Title -->
     <title>Hidden Search Widget</title>
+
     <!-- External CSS -->
     <link rel="stylesheet" href="./style.css">
-    <!-- JavaScript Code -->
-    <script src="./script.js" defer></script>
-    <!-- ICON link -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
 </head>
 <body>
+
     <div class="search">
         <input type="text" class="input" placeholder="Search...">
         <button class="btn">
-            <i class="fas fa-search"></i>
+            <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><path d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"/></svg>
         </button>
     </div>
+
+    <!-- JavaScript -->
+    <script src="./script.js" defer></script>
 </body>
 </html>
