style: improved UI design and added description

--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
     
         <article class="project-card">
             <a href="#">
-                <img class="project-image" src="./NumberGuessingGameImage.png" alt="Demo">
-                <p class="project-title">Title</p>
+                <img class="project-image" src="./TicTacToe-2.png" alt="Demo">
+                <p class="project-title">Kali Linux Terminal</p>
+                <p class="project-description">A web-based implementation of the classic Tic Tac Toe game JavaScript.</p>
                 <p class="tags">
                     <span class="project-difficulty">Easy</span>
-                    <span class="project-link">Open »</span>
+                    <span class="project-link">Try »</span>
                 </p>
             </a>
         </article>
