style: description formatting

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             <a href="#">
                 <img class="project-image" src="./TicTacToe-2.png" alt="Demo">
                 <p class="project-title">Kali Linux Terminal</p>
-                <p class="project-description">A web-based implementation of the classic Tic Tac Toe game JavaScript.</p>
+                <p class="project-description">Clone Kali Linux Terminal: Interactive web implementation replicating the Kali Linux terminal.</p>
                 <p class="tags">
-                    <span class="project-difficulty">Easy</span>
+                    <span class="project-difficulty">Hard</span>
                     <span class="project-link">Try »</span>
                 </p>
             </a>
