--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- NavBar -->
     <nav class="navContainer">
         <div class="navTitle">
-            <img src="https://github.com/Alkaison.png" title="Profile Picture" alt="Alkaison github profile pic" id="profilePic">
+            <img src="./images/profilePhoto.png" title="Profile Picture" alt="Alkaison github profile pic" id="profilePic">
             <h1 id="nameTitle">Alkaison</h1>
         </div>
         <div class="navSearch">
@@ -32,7 +32,7 @@
     
         <article class="project-card">
             <a href="#">
-                <img class="project-image" src="./TicTacToe-2.png" alt="Demo">
+                <img class="project-image" src="./images/comingsoon.png" alt="Demo">
                 <p class="project-title">Kali Linux Terminal</p>
                 <p class="project-description">Clone Kali Linux Terminal: Interactive web implementation replicating the Kali Linux terminal.</p>
                 <p class="tags">
