Feat: search projects by name

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h1 id="nameTitle">Alkaison</h1>
         </div>
         <div class="navSearch">
-            <input type="text" id="searchProjects" placeholder="Search 'JavaScript'">
+            <input type="text" id="searchProjects" placeholder="Search 'Calculator'">
             <a href="https://twitter.com/Alkaison" title="Twitter Profile"><button id="twitterBtn"><i class="fa-brands fa-twitter"></i></button></a>
         </div>
     </nav>
