style: input and output text formatting

--- a/Hackerman/index.html
+++ b/Hackerman/index.html
@@ -53,7 +53,19 @@
 
         <div class="terminal-text-wrap">
 
-            Coming soon...
+            <div class="command-output">
+                <div class="output" style="display: none;">
+                    <br>
+                        <label class="commandLine" for="command">visitor@Alkaison:~$</label>
+                        <span class="outputText"></span>
+                    <br>
+                </div>
+            </div>
+
+            <div class="command-input">
+                <label class="commandLine" for="command">visitor@Alkaison:~$</label>
+                <input type="text" autofocus id="command" class="commandField">
+            </div>
 
         </div>
 
