Fix: Terminal project link, JS and docs

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
     <div class="projects-container">
     
         <article class="project-card">
-            <a href="#">
-                <img class="project-image" src="./images/comingsoon.png" alt="Demo">
-                <p class="project-title">Kali Linux Terminal</p>
-                <p class="project-description">Clone Kali Linux Terminal: Interactive web implementation replicating the Kali Linux terminal.</p>
+            <a href="./Hackerman/index.html">
+                <img class="project-image" src="./images/projects/Kali_Linux_Terminal.png" alt="Demo">
+                <p class="project-title">Linux Terminal [Contribute]</p>
+                <p class="project-description">Interactive web implementation replicating the Kali Linux terminal, Contribute to increase its features.</p>
                 <p class="tags">
-                    <span class="project-difficulty">Hard</span>
+                    <span class="project-difficulty">Medium</span>
                     <span class="project-link">Try »</span>
                 </p>
             </a>
