docs: added comments and little bit refactoring

--- a/Password Generator/index.html
+++ b/Password Generator/index.html
@@ -8,11 +8,11 @@
 
     <!-- External CSS -->
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../main.css">
 </head>
 <body>
 
     <div class="container">
-
         <form name="passwordGen">
             <fieldset>
                 <legend id="legend-title">Password Generator</legend>
@@ -40,7 +40,6 @@
                 <input type="button" value="Generate Password" id="genBtn">
             </fieldset>
         </form>
-
     </div>
     
     <!-- JavaScript -->
