--- a/Temperature Converter/index.html
+++ b/Temperature Converter/index.html
@@ -8,6 +8,7 @@
 
     <!-- External CSS -->
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../main.css">
 </head>
 <body>
 
