--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -8,6 +8,7 @@
 
     <!-- External CSS -->
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../main.css">
     <!-- MathJS CDN -->
     <script src="https://cdn.jsdelivr.net/npm/mathjs@11.8.0/lib/browser/math.min.js"></script>
 </head>
