--- a/Counter/index.html
+++ b/Counter/index.html
@@ -8,6 +8,7 @@
 
     <!-- External CSS -->
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../main.css">
 </head>
 <body>
     
@@ -22,7 +23,6 @@
             </div>
         </div>
     </div>
-
     <!-- JavaScript -->
     <script src="./script.js" defer></script>
 </body>
