--- a/Number Guessing Game/index.html
+++ b/Number Guessing Game/index.html
@@ -8,6 +8,7 @@
 
     <!-- External CSS -->
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../main.css">
     <!-- Hiding the buttons -->
     <style>
         /* Hide the number input spinner */
@@ -20,10 +21,10 @@
         /* Optional styles to hide the number input arrow in Firefox */
         input[type="number"] {
             -moz-appearance: textfield;
+            appearance: textfield;
         }
     </style>
 </head>
-
 <body>
 
     <div class="container">
@@ -40,7 +41,6 @@
     </div>
 
     <script>
-
         // Prevent form submission 
         const form = document.querySelector("form");
 
@@ -49,7 +49,6 @@
                 event.preventDefault();
             }
         });
-
     </script>
 
     <!-- JavaScript -->
