Fix: title overflow

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <article class="project-card">
             <a href="./Hackerman/index.html">
                 <img class="project-image" src="./images/projects/Kali_Linux_Terminal.png" alt="Demo">
-                <p class="project-title">Linux Terminal [Contribute]</p>
+                <p class="project-title">Linux Terminal</p>
                 <p class="project-description">Interactive web implementation replicating the Kali Linux terminal, Contribute to increase its features.</p>
                 <p class="tags">
                     <span class="project-difficulty">Medium</span>
